
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_family; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int addr ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memcpy (int *,int ,int ) ;
 int socket (int ,int ,int ) ;

int connect_host(char * host,int port)
{
        struct sockaddr_in addr;
        struct hostent *he;
 int ret;
        int sock;

        he=gethostbyname(host);

        if (he==((void*)0)) return -1;
        sock=socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
        if (sock==-1) return -1;

        memcpy(&addr.sin_addr, he->h_addr, he->h_length);

        addr.sin_family=AF_INET;
        addr.sin_port=htons(port);

 ret = connect(sock, (struct sockaddr *)&addr, sizeof(addr));

        if(ret == 0 ) {
                return sock;
 } else {
  return -1;
 }

 return -1;
}
